--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <div class="container">
         <div class="left">
             <div class="top-left">
-                <img src="/src/top.png" alt="">
+                <img src="./src/top.png" alt="">
             </div>
             <div class="bottom-left">        
-                <img src="/src/bottom.png" alt="">
+                <img src="./src/bottom.png" alt="">
             </div>
         </div>
         <div class="right">
             <div class="top-right">
-                <img src="/src/top.png" alt="">
+                <img src="./src/top.png" alt="">
             </div>
             <div class="bottom-right">        
-                <img src="/src/bottom.png" alt="">
+                <img src="./src/bottom.png" alt="">
             </div>
         </div>
     </div>
