--- a/index.html
+++ b/index.html
@@ -10,18 +10,38 @@
     <div class="container">
         <div class="left">
             <div class="top-left">
-                <img src="./src/top.png" alt="">
+                <!-- A Chrome -->
+                <img class="aa hide" src="./src/top-a.png" alt="">
+                <!-- B Safari -->
+                <img class="bb hide" src="./src/top-b.png" alt="">
+                <!-- C Firefox -->
+                <img class="cc hide" src="./src/top-c.png" alt="">
             </div>
             <div class="bottom-left">        
-                <img src="./src/bottom.png" alt="">
+                <!-- A Chrome -->
+                <img class="aa hide" src="./src/bottom-a.png" alt="">
+                <!-- B Safari -->
+                <img class="bb hide" src="./src/bottom-b.png" alt="">
+                <!-- C Firefox -->
+                <img class="cc hide" src="./src/bottom-c.png" alt="">
             </div>
         </div>
         <div class="right">
             <div class="top-right">
-                <img src="./src/top.png" alt="">
+                <!-- A Chrome -->
+                <img class="aa hide" src="./src/top-a.png" alt="">
+                <!-- B Safari -->
+                <img class="bb hide" src="./src/top-b.png" alt="">
+                <!-- C Firefox -->
+                <img class="cc hide" src="./src/top-c.png" alt="">
             </div>
-            <div class="bottom-right">        
-                <img src="./src/bottom.png" alt="">
+            <div class="bottom-right">    
+                <!-- A Chrome -->    
+                <img class="aa hide" src="./src/bottom-a.png" alt="">
+                <!-- B Safari -->
+                <img class="bb hide" src="./src/bottom-b.png" alt="">
+                <!-- C Firefox -->
+                <img class="cc hide" src="./src/bottom-c.png" alt="">
             </div>
         </div>
     </div>
