--- a/index.html
+++ b/index.html
@@ -8,40 +8,45 @@
 </head>
 <body>
     <div class="container">
-        <div class="left">
-            <div class="top-left">
-                <!-- A Chrome -->
-                <img class="aa hide" src="./src/top-a.png" alt="">
-                <!-- B Safari -->
-                <img class="bb hide" src="./src/top-b.png" alt="">
-                <!-- C Firefox -->
-                <img class="cc hide" src="./src/top-c.png" alt="">
-            </div>
-            <div class="bottom-left">        
-                <!-- A Chrome -->
-                <img class="aa hide" src="./src/bottom-a.png" alt="">
-                <!-- B Safari -->
-                <img class="bb hide" src="./src/bottom-b.png" alt="">
-                <!-- C Firefox -->
-                <img class="cc hide" src="./src/bottom-c.png" alt="">
-            </div>
+        <div class="banner">
+            <p>You are in</p>
         </div>
-        <div class="right">
-            <div class="top-right">
-                <!-- A Chrome -->
-                <img class="aa hide" src="./src/top-a.png" alt="">
-                <!-- B Safari -->
-                <img class="bb hide" src="./src/top-b.png" alt="">
-                <!-- C Firefox -->
-                <img class="cc hide" src="./src/top-c.png" alt="">
+        <div class="wrapper">
+            <div class="left">
+                <div class="top-left">
+                    <!-- A Chrome -->
+                    <img class="aa hide" src="./src/top-a.png" alt="">
+                    <!-- B Safari -->
+                    <img class="bb hide" src="./src/top-b.png" alt="">
+                    <!-- C Firefox -->
+                    <img class="cc hide" src="./src/top-c.png" alt="">
+                </div>
+                <div class="bottom-left">        
+                    <!-- A Chrome -->
+                    <img class="aa hide" src="./src/bottom-a.png" alt="">
+                    <!-- B Safari -->
+                    <img class="bb hide" src="./src/bottom-b.png" alt="">
+                    <!-- C Firefox -->
+                    <img class="cc hide" src="./src/bottom-c.png" alt="">
+                </div>
             </div>
-            <div class="bottom-right">    
-                <!-- A Chrome -->    
-                <img class="aa hide" src="./src/bottom-a.png" alt="">
-                <!-- B Safari -->
-                <img class="bb hide" src="./src/bottom-b.png" alt="">
-                <!-- C Firefox -->
-                <img class="cc hide" src="./src/bottom-c.png" alt="">
+            <div class="right">
+                <div class="top-right">
+                    <!-- A Chrome -->
+                    <img class="aa hide" src="./src/top-a.png" alt="">
+                    <!-- B Safari -->
+                    <img class="bb hide" src="./src/top-b.png" alt="">
+                    <!-- C Firefox -->
+                    <img class="cc hide" src="./src/top-c.png" alt="">
+                </div>
+                <div class="bottom-right">    
+                    <!-- A Chrome -->    
+                    <img class="aa hide" src="./src/bottom-a.png" alt="">
+                    <!-- B Safari -->
+                    <img class="bb hide" src="./src/bottom-b.png" alt="">
+                    <!-- C Firefox -->
+                    <img class="cc hide" src="./src/bottom-c.png" alt="">
+                </div>
             </div>
         </div>
     </div>
